Lägg till vinjett

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,11 @@ Depends:
 Imports:
     ggplot2 (>= 3.0.0)
 Suggests:
-    scales
+    scales,
+    knitr,
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
