--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9004
 Authors@R: c(
     person("John", "Lövrot", , "john.lovrot@sll.se", c("aut", "cre"), c(ORCID = "0000-0002-9339-8059")),
     person("Hadley", "Wickham", role = c("ctb"), comment = "code from the ggplot2 and scales packages"),    
-    person("RCC", role = c("fnd")) # also cph?
+    person("RCC", role = c("fnd"))
     )
 Description: 
     The longterm goal is to provide 'ggplot2' themes, scales and geoms that 
