--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description:
     adhere to the graphic rules at Regional Cancer Centers (RCC) in Sweden. 
     Currently, RCC scales are implemented.
 License: GPL-2
-URL: http://bitbucket.org/oc1lojo/rccthemes
+URL: http://bitbucket.org/cancercentrum/rccthemes
 Depends:
     R (>= 3.0.0)
 Imports:
