--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description:
     adhere to the graphic rules at Regional Cancer Centers (RCC) in Sweden. 
     Currently, RCC scales are implemented.
 License: GPL-2
-URL: http://bitbucket.org/cancercentrum/rccthemes
+URL: https://cancercentrum.bitbucket.io/rccthemes/, http://bitbucket.org/cancercentrum/rccthemes
+BugReports: https://bitbucket.org/cancercentrum/rccthemes/issues
 Depends:
     R (>= 3.0.0)
 Imports:
