--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,9 @@
-pandoc: '2.7'
-pkgdown: 1.3.0
+pandoc: 2.7.3
+pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
   scales-intro-sv: scales-intro-sv.html
+urls:
+  reference: https://cancercentrum.bitbucket.io/rccthemes//reference
+  article: https://cancercentrum.bitbucket.io/rccthemes//articles
 
