--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: 2.7.3
-pkgdown: 1.4.1
+pandoc: 2.10.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   scales-intro-sv: scales-intro-sv.html
+last_built: 2020-09-08T06:19Z
 urls:
   reference: https://cancercentrum.bitbucket.io/rccthemes//reference
   article: https://cancercentrum.bitbucket.io/rccthemes//articles
