--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: rccthemes
 Title: RCC Themes, Scales and Geoms for 'ggplot2'
 Version: 0.3.4.9000
 Authors@R: c(
-    person("John", "Lövrot", , "john.lovrot@sll.se", c("aut", "cre"), c(ORCID = "0000-0002-9339-8059")),
+    person("John", "Lövrot", , "john.lovrot@regionstockholm.se", c("aut", "cre"), c(ORCID = "0000-0002-9339-8059")),
     person("Hadley", "Wickham", role = c("ctb"), comment = "code from the ggplot2 and scales packages"),    
     person("RCC", role = c("fnd"))
     )
@@ -26,4 +26,4 @@ VignetteBuilder:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
